Replace uses of -Djdk.foreign.restricted (useless now) with --enable-native-access