@@ -5,28 +5,28 @@
  * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
  *
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
@@ -34,28 +34,28 @@
  *   TestUpcallHighArity
  *
   * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
@@ -63,28 +63,28 @@
  *   TestUpcallHighArity
  *
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
@@ -92,28 +92,28 @@
  *   TestUpcallHighArity
  *
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  * @run testng/othervm/native
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
@@ -121,49 +121,49 @@
  *   TestUpcallHighArity
  *
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   TestDowncall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   TestDowncall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   TestDowncall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   TestDowncall
  *
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
@@ -171,28 +171,28 @@
  *   TestUpcall
  *
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
@@ -200,28 +200,28 @@
  *   TestUpcall
  *
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
@@ -229,28 +229,28 @@
  *   TestUpcall
  *
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  * @run testng/othervm
- *   -Dforeign.restricted=permit
+ *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
